# KarmaBot

./: .dockerignore  .env_dist  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.adoc  Dockerfile  LICENSE  Makefile  README.md  __main__.py  aerich.ini  alembic.ini  bot-config.yml  deploy_manual.md  docker-compose.yaml  docker-compose.yml  freeze.txt  initialize.py  karma_bot.conf  pyproject.toml  requirements.test.txt  requirements.txt
.github/workflows/: build.yml  lint.yml  python-app.yml  test.yml
app/: __init__.py  __main__.py  config.py  misc.py
app/config/: __init__.py  db.py  karmic_restriction.py  karmic_triggers.py  log.py  logging_config.py  main.py  moderation.py  restriction_plan.py  storage.py  tg_client.py  webhook.py
app/filters/: __init__.py  basic_arguments.py  has_target.py  is_reply.py  karma_change.py  reports.py  superuser.py  tg_permissions.py
app/handlers/: __init__.py  admin_bot.py  base.py  change_karma.py  chat_rules.py  errors.py  import_karma.py  karma.py  keyboards.py  moderator.py  settings.py  superuser.py
app/middlewares/: __init__.py  acl.py  config_middleware.py  db_middleware.py  fix_target_middleware.py
app/models/: __init__.py  chat.py  common.py  db.py  karma_actions.py  moderator_actions.py  user.py  user_karma.py
app/services/: adaptive_trottle.py  apscheduller.py  change_karma.py  find_target_user.py  healthcheck.py  karma.py  karma_top.py  moderation.py  remove_message.py  report.py  restrict_call.py  restrictor.py  settings.py  setup_chat.py  trottling.py  user_getter.py  (+1 more)
config/: bot-config.yml
config_dist/: .env  bot-config.yaml  bot-config.yml  logging.yaml
docs/: deploy_manual.md  development.md
migrations/: 01_initialize.py  02_pump_karma_puls49.py  03_add_settings.sql  04_add_karma_counting_column_to_settings.sql  05_add_report_table.sql  06_alter_reports_add_message_columns.sql  07_add_award_col_to_settings.sql  08_to_postgres.migrate  08_to_postgres.sh  08_to_postgres.sql  aerich.py  migrate.py
migrations_alchemy/: env.py
tests/: __init__.py  common.py  fixtures.py  test_auto_like.py  test_correct_karma_filter.py  test_not_one_word.py  test_timedelta_parser.py
(+62 files in other folders)
