[project]
name = "karmabot"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
ignore-init-module-imports = true
pydocstyle = { convention = "google" }
exclude = [
  ".git",
  ".github",
  "venv",
  ".venv",
  "docs",
  "db_data",
  "config_dist",
]

[tool.black]
target-version = ["py311"]
line-length = 100
include_trailing_comma = true
exclude = '''
(
  | \.git
  | .github
  | venv
  | .venv
  | docs
  | db_data
  | config_dist
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
remove_redundant_aliases = true