[project]
name = "karmabot"
version = "1.6.1"
requires-python = ">=3.11"
dependencies = [
    "aiogram~=3.3.0",
    "aiohttp~=3.9.1",
    "tortoise-orm~=0.19.3",
    "asyncpg~=0.29.0",
    "python-dotenv~=0.21.1",
    "Pyrogram~=2.0.97",
    "pyyaml~=6.0.1",
    "colorlog~=6.7.0",
    "redis~=4.4.2",
    "pre-commit~=3.5.0",
]

[project.optional-dependencies]
test = [
    "pytest~=7.4.4",
]
lint = [
    "ruff~=0.1.9",
    "isort~=5.13.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 100
pydocstyle = { convention = "google" }
extend-select = ["I"]

[tool.isort]
profile = "black"
